<resources>
    <string name="app_name">PBL Closet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="filterLabel">Filter</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_cart">Shopping Cart</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="noCartItems">No items added to cart</string>
    <string name="coNoItems">Number of Items:</string>
    <string name="totalPrice">Total Price:</string>
    <string name="paymoney">Proceed Payment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_enter_all_details">Please make sure you haven\'t left any field blank.</string>
    <string name="progress_dialog_loading_text">Loading&#8230;</string>
    <string name="message_login_processing">Logging you in&#8230;</string>
    <string name="message_welcome">Welcome</string>
    <string name="error_internet_unavailable">Please check your internet connection and try again.</string>
    <string name="error_authentication">Authentication error : Incorrect username or password.</string>
    <string name="error_generic">""</string>
    <string name="error_generic_2">""</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="error_phone_number_minimum_required">Please enter a 10 digit number.</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="message_no_content">No content available</string>

    <!-- Strings related to Internet -->
    <string name="textview_no_internet_available">Please check your internet connection.</string>

    <string name="action_donor_login">"I'd like to donate"</string>
    <string name="action_user_login">"I'd like to buy"</string>
    <string name="action_login_skip"><u>Skip</u></string>
    <string name="title_activity_donor">Donation History</string>


    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="prompt_zip">Zip</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_dob">Date of Birth</string>


    <string name="heading_description">Description</string>
    <string name="heading_date">Received Date</string>
    <string name="heading_status">Status</string>

    <string name="prompt_title">Item name</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_size">Size</string>
    <string name="prompt_image">Add Image</string>
    <string name="prompt_donate">Donate</string>

    <string name="activity_add_item">Add item</string>

</resources>
